--- a/FareMicroServiceV2/src/main/resources/application.properties
+++ b/FareMicroServiceV2/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=FareMicroServiceV2
+server.port=8282
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=MySQL$h1t
+spring.jpa.hibernate.ddl-auto=update
